Polishing the new release some more

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -9,12 +9,12 @@
           <p>Written in Go, NATS is available as a client for approximately a dozen languages, many of which are supported by the Apcera team. Here’s the full list of <a href="/download">NATS clients</a>.</p>
         </div>
         <div class="col-md-6">
-          <p>NATS is unique in its simplicity and performance, and as a result powers some of the largest production environments.. You can learn more about the design characteristics in the <a href="">NATS FAQ</a>.</p>
+          <p>NATS is unique in its simplicity and performance, and as a result powers some of the largest production environments.. You can learn more about the design characteristics in the <a href="/documentation/faq/">NATS FAQ</a>.</p>
         </div>
       </div>
 
       <hr>
-      
+
       <div class="row">
         <div class="col-md-12">
           <h3>Recent Posts</h3>
