--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -2,7 +2,9 @@
 <div id="main-con" class="container">
   <div class="row">
     <div class="col-md-7">
-      <a href="/blog"><i class="fa fa-backward"></i> Back to Blog</a>
+      <div class="blog-nav-con-upper">
+        <a href="/blog"><i class="fa fa-backward"></i> Back to Blog</a>
+      </div>
       <div class="page-header">
         <h1>{{ title .Title }}</h1>
       </div>
