fixed a media query for the left nav

--- a/layouts/documentation/single.html
+++ b/layouts/documentation/single.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 <div id="main-con" class="container">
   <div class="row">
-    <div id="left-nav-con" class="col-md-3">
+    <div id="left-nav-con" class="col-md-3 hidden-xs hidden-sm">
       {{ partial "side-menu.html" . }}
     </div>
     <div id="documentation-content" class="col-md-9">
