--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -5,91 +5,101 @@
 // Include Fonts for use
 @import "font-awesome.less";
 
-// Colors
-@nats-brand-primary:      #232a45;  // Main Dark blue
-@nats-brand-secondary:    #27aae1;  // Light Blue - Logo
-@nats-brand-ternary:      #8dc63f;  // Light Green - Logo
-@nats-brand-quaternary:   #34a574;  // Dark green - Logo
-@nats-brand-quinary:      #375c93;  // Dark Blue - Logo
+// Primary Colours
+@nats-brand-background:                     #00011f;
+@nats-colour-blue-lite:                     #27aae1;
+@nats-colour-blue-dark:                     #375c93;
+@nats-colour-green-lite:                    #8dc63f;
+@nats-colour-green-dark:                    #34a574;
 
-// Nats new colour scheme
-@nats-brand-background:   #00011f;
-@nats-colour-blue-lite:   #23a9e1;
-@nats-colour-blue-dark:   #365d95;
-@nats-colour-green-lite:  #8dc641;
-@nats-colour-green-dark:  #30a675;
+// Secondary Colours
+@nats-brand-gray-light:                     #f5f6f9;
+@nats-brand-blue-dark:                      #2e3957;
+@nats-brand-black:                          #000;
 
-@nats-brand-gray-light:   #f5f6f9;
-@nats-brand-gray:         #c0c1c4;
-@nats-brand-gray-dark:    #666;
+@nats-brand-gray:                           #c0c1c4;
+@nats-brand-gray-dark:                      #666;
 
 // Variable Overrides
-@text-color:              @nats-brand-gray-dark;
-@font-family-sans-serif:  'Source Sans Pro', sans-serif;
-//@font-size-base:          16px;
-@link-color:              @nats-brand-secondary;
-@link-hover-color:        darken(@link-color, 15%);
+@text-color:                                @nats-brand-gray-dark;
+@font-family-sans-serif:                    'Source Sans Pro', sans-serif;
+@font-family-monospace:                     'Source Code Pro', ;
+//@font-size-base:                            16px;
+@link-color:                                @nats-colour-blue-lite;
+@link-hover-color:                          darken(@link-color, 15%);
 
 // Navbar
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
-@grid-float-breakpoint:            @screen-md-min;
+@grid-float-breakpoint:                     @screen-md-min;
 // Basics of a navbar
-@navbar-height:                    77px;
-@navbar-margin-bottom:             @line-height-computed;
-@navbar-border-radius:             @border-radius-base;
-@navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
-@navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
-@navbar-collapse-max-height:       340px;
+@navbar-height:                             77px;
+@navbar-margin-bottom:                      @line-height-computed;
+@navbar-border-radius:                      @border-radius-base;
+@navbar-padding-horizontal:                 floor((@grid-gutter-width / 2));
+@navbar-padding-vertical:                   ((@navbar-height - @line-height-computed) / 2);
+@navbar-collapse-max-height:                340px;
 
-@navbar-default-color:             #fff;
-@navbar-default-bg:                @nats-brand-background;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-color:                      #fff;
+@navbar-default-bg:                         @nats-brand-background;
+@navbar-default-border:                     darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #fff;
-@navbar-default-link-hover-color:          #fff;
-@navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #fff;
-@navbar-default-link-active-bg:            transparent;
-@navbar-default-link-disabled-color:       #ccc;
-@navbar-default-link-disabled-bg:          transparent;
+@navbar-default-link-color:                 #fff;
+@navbar-default-link-hover-color:           #fff;
+@navbar-default-link-hover-bg:              transparent;
+@navbar-default-link-active-color:          #fff;
+@navbar-default-link-active-bg:             transparent;
+@navbar-default-link-disabled-color:        #ccc;
+@navbar-default-link-disabled-bg:           transparent;
 
 // Navbar brand label
-@navbar-default-brand-color:               @navbar-default-link-color;
-@navbar-default-brand-hover-color:         lighten(@nats-brand-primary, 10%);
-@navbar-default-brand-hover-bg:            transparent;
+@navbar-default-brand-color:                @navbar-default-link-color;
+@navbar-default-brand-hover-color:          lighten(@nats-brand-blue-dark, 10%);
+@navbar-default-brand-hover-bg:             transparent;
 
 // Navbar toggle
-@navbar-default-toggle-hover-bg:           lighten(@nats-brand-primary, 10%);
-@navbar-default-toggle-icon-bar-bg:        #fff;
-@navbar-default-toggle-border-color:       #fff;
+@navbar-default-toggle-hover-bg:            lighten(@nats-brand-blue-dark, 10%);
+@navbar-default-toggle-icon-bar-bg:         #fff;
+@navbar-default-toggle-border-color:        #fff;
 
 //== Carousel
-@carousel-text-shadow:                        0 1px 2px rgba(0,0,0,.6);
+@carousel-text-shadow:                      0 1px 2px rgba(0,0,0,.6);
 
-@carousel-control-color:                      #fff;
-@carousel-control-width:                      15%;
-@carousel-control-opacity:                    .5;
-@carousel-control-font-size:                  20px;
+@carousel-control-color:                    #fff;
+@carousel-control-width:                    15%;
+@carousel-control-opacity:                  .5;
+@carousel-control-font-size:                20px;
 
-@carousel-indicator-active-bg:                @nats-brand-secondary;
-@carousel-indicator-border-color:             @nats-brand-secondary;
+@carousel-indicator-active-bg:              @nats-colour-blue-lite;
+@carousel-indicator-border-color:           @nats-colour-blue-lite;
 
-@carousel-caption-color:                      #fff;
+@carousel-caption-color:                    #fff;
 
 //== Pills
 @nav-pills-active-link-hover-bg:            @component-active-bg;
 @nav-pills-active-link-hover-color:         @component-active-color;
 
+// Type
+@font-size-base:                            16px;
+@font-size-h1:                              floor((@font-size-base * 2.3)); // ~36px
+@font-size-h2:                              floor((@font-size-base * 1.8)); // ~28px
+@font-size-h3:                              ceil((@font-size-base * 1.7)); // ~24px
+@font-size-h4:                              ceil((@font-size-base * 1.25)); // ~21px
+@font-size-h5:                              @font-size-base;
+@font-size-h6:                              ceil((@font-size-base * 0.85)); // ~12px
+
 // Code
-@code-color:                  @nats-brand-gray-dark;
-@code-bg:                     #eee;
+@code-color:                                @nats-brand-gray-dark;
+@code-bg:                                   #eee;
+
+// Labels
+@label-default-bg:                          #ccc;
 
 // Footer
-@footer-text-color:       @nats-brand-gray;
-@footer-link-hover:       @nats-brand-secondary;
-@footer-link:             @nats-brand-secondary;
+@footer-text-color:                         @nats-brand-gray;
+@footer-link-hover:                         @nats-colour-blue-lite;
+@footer-link:                               @nats-colour-blue-lite;
 
 // #############################################################################
 
@@ -115,6 +125,35 @@ a[name]:before {
   visibility: hidden;
 }
 
+// Headers
+h1 {
+  font-weight: 400;
+}
+h2 {
+  font-weight: 400;
+}
+h3 {
+  font-weight: 600;
+  color: @nats-colour-blue-dark;
+}
+h4 {
+  font-weight: 600;
+  color: @nats-colour-blue-dark;
+}
+h5 {
+  font-weight: 700;
+}
+h6 {
+  font-weight: 400;
+}
+.lead {
+  font-size: floor((@font-size-base * 1.15));
+  font-weight: 400;
+
+  @media (min-width: @screen-sm-min) {
+    font-size: floor((@font-size-base * 1.4));
+  }
+}
 // Colour text
 .nats-colour-blue-lite {
   color: @nats-colour-blue-lite;
@@ -184,30 +223,32 @@ nav.navbar-default {
         }
         a:hover, a:active, a:focus, &.active a {
           outline: 0;
-          border-bottom: 1px solid #fff;
+          //border-bottom: 1px solid #fff;
+          border-bottom: none;
           padding: 28px 0px 12px 0px;
           margin: 0px 15px 16px;
+          color: @nats-colour-green-lite;
 
         }
       }
       @media (max-width: @screen-md-min) {
         a:hover, a:active, a:focus, &.active a, &.active a:hover {
           outline: 0;
-          background-color: lighten(@nats-brand-primary, 10%);
+          background-color: lighten(@nats-brand-blue-dark, 10%);
         }
         &.active, &.open {
           a.main-item,
           a.main-item:hover {
-            background-color: lighten(@nats-brand-primary, 10%);
+            background-color: lighten(@nats-brand-blue-dark, 10%);
           }
         }
         &.active, &.open {
           ul {
             li.active {
               a.sub-item {
-                background-color: lighten(@nats-brand-primary, 10%);
+                background-color: lighten(@nats-brand-blue-dark, 10%);
                 &:hover, &:active, &:focus {
-                  background-color: lighten(@nats-brand-primary, 10%);
+                  background-color: lighten(@nats-brand-blue-dark, 10%);
                 }
               }
             }
@@ -215,12 +256,12 @@ nav.navbar-default {
           a.sub-item {
             background-color: transparent;
             &:hover, &:active, &:focus {
-              background-color: lighten(@nats-brand-primary, 10%);
+              background-color: lighten(@nats-brand-blue-dark, 10%);
             }
           }
         }
         a.sub-item:hover {
-          background-color: lighten(@nats-brand-primary, 10%);
+          background-color: lighten(@nats-brand-blue-dark, 10%);
         }
       }
 
@@ -362,7 +403,7 @@ html#home-html {
   // Recent Posts
   #recent-posts {
 
-    h4 {
+    h5 {
       margin-bottom: 0px;
     }
     p {
@@ -536,7 +577,7 @@ html#home-html {
   }
   table#support-table {
     thead {
-      background: @nats-brand-primary;
+      background: @nats-brand-blue-dark;
       color: #fff;
       tr {
         th {
@@ -576,12 +617,12 @@ html#home-html {
         }
         .main-menu-item-title {
           font-size: 18px;
-          color: @nats-brand-primary;
+          color: @nats-brand-blue-dark;
         }
         &.active {
           a.main-menu-item-title {
             font-weight: bold;
-            color: @nats-brand-primary;
+            color: @nats-brand-blue-dark;
           }
         }
 
