Fixed a big for the main content area background showing on homepage

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -288,6 +288,10 @@ html#home-html {
   background-color: @nats-brand-background;
 }
 #home-page {
+  #main-con {
+    background: transparent;
+  }
+
   background-color: @nats-brand-background;
 
   .navbar-default {
