Updated the styles for the footer with a new powered by apcera logo and style updates to the blog

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,8 +8,7 @@
             <p><a href="#licenseModal" data-toggle="modal" data-target="#licenseModal">View License</a></p>
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-offset-5 supported">
-            <p>Supported By</p>
-            <p><a href="http://apcera.com/" target="_blank"><img class="img-responsive" src="/img/apcera_logo.png" alt="Apcera"></a></p>
+            <p><a href="http://apcera.com/" target="_blank"><img class="img-responsive" src="/img/powered-by-apcera.png" alt="Apcera"></a></p>
           </div>
         </div>
       </div>
