--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -45,7 +45,7 @@
         <div class="quote-con">
           <div class="quote-inner">
             <p class="lead">"The simplicity and focus of NATS enables it to deliver superior performance and stability with a lightweight footprint. It has the potential of becoming the de-facto transport for microservice architectures and event driven systems in this new era."</p>
-            <p><strong>&mdash;Asim Aslam, Founder, GoMicro</strong></p>
+            <p><strong>&mdash;Asim Aslam, Creator of Micro</strong></p>
           </div>
         </div>
       </li>
