Add link to source on GitHub

--- a/layouts/documentation/single.html
+++ b/layouts/documentation/single.html
@@ -5,6 +5,7 @@
       {{ partial "side-menu.html" . }}
     </div>
     <div id="documentation-content" class="col-md-9">
+      <a class="pull-right" href="{{ .Site.Params.githubBaseUrl }}/{{ .File.Path }}"><small><i class="icon-mark-github"></i></small> Edit on GitHub</a>
       {{ .Content }}
       </ul>
     </div>
