--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -6,7 +6,7 @@
         <a href="/blog"><i class="fa fa-backward"></i> Back to Blog</a>
       </div>
       <div class="page-header">
-        <h1>{{ title .Title }}</h1>
+        <h1>{{ .Title }}</h1>
       </div>
     </div>
   </div>
