final spacing changes for svgs on homepage

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -426,6 +426,7 @@ html#home-html {
       svg.vmware{
         width: 19%;
         left: 80%;
+        bottom: -1px;
       }
     }
 
@@ -541,6 +542,13 @@ html#home-html {
     .background-con {
       background-position: center 45%;
     }
+     #homepage-content {
+        .bottom-logo-container{
+          svg.vmware{
+            bottom: -3px;
+          }
+        }
+      }
    }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -565,7 +573,7 @@ html#home-html {
       }
       .bottom-logo-container{
         svg.vmware{
-          bottom: -3px;
+          bottom: -4px;
         }
       }
     }
