--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -2,8 +2,9 @@
 // Include base bootstrap
 @import "bootstrap/bootstrap.less";
 
-// Include Fonts for use
-@import "font-awesome.less";
+// Include base bootstrap
+@import "font-awesome/font-awesome.less";
+
 
 // Primary Colours
 @nats-brand-background:                     #00011f;
@@ -333,6 +334,7 @@ html#home-html {
   #homepage-content {
     padding-top: 60px;
     text-align: center;
+    color: #ffffff;
     h1 {
       font-size: 42px;
       margin-bottom: 15px;
@@ -340,7 +342,6 @@ html#home-html {
     .lead {
       font-family: @font-family-sans-serif;
       font-weight: 200;
-      color: #fff;
       font-size: 34px;
 
     }
@@ -366,9 +367,8 @@ html#home-html {
       }
     }
     .bottom-info{
-      text-align: left;
+      text-align: center;
       font-size: 22px;
-      color: #fff;
       margin-bottom: 30px;
     }
     #download-button {
@@ -387,9 +387,6 @@ html#home-html {
         -moz-box-shadow: 0px 0px 15px 6px rgba(255,255,255,0.65);
         box-shadow: 0px 0px 15px 6px rgba(255,255,255,0.65);
       };
-      .download-text{
-        padding: 0px 5px;
-      }
     }
     #bottom-logo-container {
       text-align: center;
