--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,9 +4,9 @@
         <div class="row">
           <div class="col-xs-12 col-sm-4 copyright">
             <p class="social">
-              <a target="_blank" href="https://twitter.com/nats_io"><img alt="twitter" src="/img/social/twitter.png"/></a>
-              <a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><img alt="Google Groups" src="/img/social/google.png"/></a>
-              <a target="_blank" href="https://github.com/nats-io"><img alt="github" src="/img/social/github{{ if .IsHome }}_light{{end}}.png"/></a>
+              <a target="_blank" href="https://twitter.com/nats_io"><i class="icon-twitter"></i></a>
+              <a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon-google-plus"></i></a>
+              <a target="_blank" href="https://github.com/nats-io"><i class="icon-mark-github"></i></a>
               <a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><img alt="Slack" src="/img/social/slack.png"/></a>
             </p>
             <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a> (<a href="#licenseModal" data-toggle="modal" data-target="#licenseModal">View License</a>), as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
