--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -501,6 +501,9 @@ html#home-html {
       img {
         width: 32px;
       }
+      a:hover{
+        text-decoration: none;
+      }
       .icon-twitter,
       .icon-google-plus,
       .icon-mark-github{
@@ -749,6 +752,9 @@ html#home-html {
     margin-bottom: 30px;
   }
 }
+.icon-back{
+  font-size: 12px;
+}
 .blog-nav-con-upper {
   padding-top: 30px;
 }
@@ -770,6 +776,7 @@ footer {
       .icon-google-plus,
       .icon-mark-github{
         vertical-align: sub;
+        font-size: 30px;
       }
       .icon-twitter{
         color: @nats-brand-twitter;
